--- a/ex-fund-account/src/main/resources/application.properties
+++ b/ex-fund-account/src/main/resources/application.properties
@@ -44,7 +44,7 @@ bys.server.host=http://192.168.0.13:7080/api/v1
 bys.client.merchantId=1
 bys.client.secret=6SKW49tZX12uyvNMoG
 
-#c2c \u5370\u5EA6\u5BF9\u63A5
+#c2c \u5370\u5ea6\u5bf9\u63a5
 plpay.server.host=http://182.162.20.46:88/client/tracnce
 plpay.server.shopNo=291
 plpay.server.signType=MD5
@@ -52,7 +52,7 @@ plpay.server.md5Key=pkriDZoEwB
 plpay.server.customerId=lsb19841626045
 plpay.server.c2c_fee_ratio=0.025
 
-#c2c \u4EBA\u6C11\u5E01\u5BF9\u63A5
+#c2c \u4eba\u6c11\u5e01\u5bf9\u63a5
 cnyPlpay.server.host=http://182.162.20.46:90/client/tracnce
 cnyPlpay.server.shopNo=334
 cnyPlpay.server.signType=MD5
@@ -60,7 +60,7 @@ cnyPlpay.server.md5Key=HIETqcV152
 cnyPlpay.server.customerId=gte666
 cnyPlpay.server.c2c_fee_ratio=0.025
 
-#\u57DF\u540D+\u7AEF\u53E3\u53F7
+#\u57df\u540d+\u7aef\u53e3\u53f7
 expv3.base.url=https://ex-fund.icocrop.io/
 
 #redis
@@ -73,7 +73,7 @@ spring.redis.pool.max-wait=5000
 spring.redis.pool.max-idle=256
 spring.redis.pool.min-idle=2
 spring.redis.timeout=2000ms
-spring.redis.database=0
+spring.redis.database=1
 #spring.redis.keyPrefix=
 
 meta.redis.host=${spring.redis.host}
