--- a/ex-fund-account/src/main/resources/application-local.properties
+++ b/ex-fund-account/src/main/resources/application-local.properties
@@ -3,3 +3,8 @@ swagger.host=localhost:${app.server.port}
 
 #mq
 hp.rocketmq.namespace=exp_v3-local
+
+#redis
+meta.redis.host=192.168.0.68
+meta.redis.port=16375
+meta.redis.password=456
