--- a/ex-fund-account/src/main/resources/application-prod.properties
+++ b/ex-fund-account/src/main/resources/application-prod.properties
@@ -2,24 +2,22 @@
 app.registry.eureka.url=http://eureka:HpyMV63TDu2y@172.31.42.82:8761/eureka/
 
 #db
-spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://172.31.40.126:3306/expv3_fund?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://gte.cforcheswgwm.ap-northeast-1.rds.amazonaws.com:3306/expv3_fund?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.hikari.primary.username=root
 spring.datasource.hikari.primary.password=pI0DUR3J2Gyfb923Y8yX
 
 #Hikari-second
-spring.datasource.hikari.second.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_fund?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.hikari.second.jdbcUrl=jdbc:mysql://gte.cforcheswgwm.ap-northeast-1.rds.amazonaws.com:3306/expv3_fund?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.hikari.second.username=root
-spring.datasource.hikari.second.password=root1234
-
-#swagger
-swagger.host=
+spring.datasource.hikari.second.password=QDT1jZaPE3zgWKIa3KjM
 
 #mq
+hp.rocketmq.namesrvAddr=172.31.5.60:9876;172.31.14.83:9876
 hp.rocketmq.namespace=exp
-hp.rocketmq.namesrvAddr=172.31.43.16:9876
+hp.rocketmq.instanceName=1
 
 #redis
 spring.cache.type=redis
-spring.redis.host=172.31.40.126
+spring.redis.host=prod-gte.f65mmb.ng.0001.apne1.cache.amazonaws.com
 spring.redis.port=6379
-spring.redis.password=X0yPE08en9760
+spring.redis.password=
