--- a/ex-fund-account/src/main/resources/application-prod.properties
+++ b/ex-fund-account/src/main/resources/application-prod.properties
@@ -3,12 +3,12 @@ app.registry.eureka.url=http://eureka:HpyMV63TDu2y@172.31.42.82:8761/eureka/
 
 #db
 spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://gte.cforcheswgwm.ap-northeast-1.rds.amazonaws.com:3306/expv3_fund?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.hikari.primary.username=root
+spring.datasource.hikari.primary.username=pc
 spring.datasource.hikari.primary.password=pI0DUR3J2Gyfb923Y8yX
 
 #Hikari-second
 spring.datasource.hikari.second.jdbcUrl=jdbc:mysql://gte.cforcheswgwm.ap-northeast-1.rds.amazonaws.com:3306/expv3_fund?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.hikari.second.username=root
+spring.datasource.hikari.second.username=pc
 spring.datasource.hikari.second.password=QDT1jZaPE3zgWKIa3KjM
 
 #mq
@@ -21,3 +21,6 @@ spring.cache.type=redis
 spring.redis.host=prod-gte.f65mmb.ng.0001.apne1.cache.amazonaws.com
 spring.redis.port=6379
 spring.redis.password=
+
+#bys
+bys.client.secret=cFH]0bNrt7gJI+1n5D9B
