--- a/ex-fund-account/src/main/resources/application-prod.properties
+++ b/ex-fund-account/src/main/resources/application-prod.properties
@@ -6,11 +6,6 @@ spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://gte.cforcheswgwm.ap-northe
 spring.datasource.hikari.primary.username=pc
 spring.datasource.hikari.primary.password=pI0DUR3J2Gyfb923Y8yX
 
-#Hikari-second
-spring.datasource.hikari.second.jdbcUrl=jdbc:mysql://gte.cforcheswgwm.ap-northeast-1.rds.amazonaws.com:3306/expv3_fund?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.hikari.second.username=pc
-spring.datasource.hikari.second.password=QDT1jZaPE3zgWKIa3KjM
-
 #mq
 hp.rocketmq.namesrvAddr=172.31.5.60:9876;172.31.14.83:9876
 hp.rocketmq.namespace=exp
@@ -23,4 +18,5 @@ spring.redis.port=6379
 spring.redis.password=
 
 #bys
+bys.server.host=http://172.31.40.203:7080/api/v1/
 bys.client.secret=cFH]0bNrt7gJI+1n5D9B
