--- a/ex-fund-account/src/main/resources/application.properties
+++ b/ex-fund-account/src/main/resources/application.properties
@@ -12,9 +12,9 @@ hp.rocketmq.default.consumer.group=fund-account
 
 #Hikari
 spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://localhost:3306/expv3-fund?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.hikari.primary.username=test
-spring.datasource.hikari.primary.password=123456
+spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://gte.cforcheswgwm.ap-northeast-1.rds.amazonaws.com:3306/expv3_fund?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.hikari.primary.username=pc
+spring.datasource.hikari.primary.password=pI0DUR3J2Gyfb923Y8yX
 
 
 #Hikari-primary
@@ -28,12 +28,6 @@ spring.datasource.hikari.primary.max-lifetime=1800000
 spring.datasource.hikari.primary.connection-timeout=30000
 spring.datasource.hikari.primary.connection-test-query=SELECT 1
 spring.datasource.hikari.primary.connection-init-sql=set names utf8mb4;
-
-#Hikari-second
-spring.datasource.hikari.second.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.hikari.second.jdbcUrl=jdbc:mysql://localhost:3306/expv3-fund?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.hikari.second.username=test
-spring.datasource.hikari.second.password=123456
 
 #id
 id.generator.dataCenterId=0
