--- a/ex-pc-extend/src/main/resources/application-local.properties
+++ b/ex-pc-extend/src/main/resources/application-local.properties
@@ -9,8 +9,15 @@ spring.redis.database=0
 
 
 hp.rocketmq.namespace=exp_v3-local
+hp.rocketmq.createConsumer=false
 
 #db
-spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3-pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.hikari.primary.username=root
+spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://localhost:3306/expv3-pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.hikari.primary.username=expv3
 spring.datasource.hikari.primary.password=root1234
+
+
+#redis
+meta.redis.host=192.168.0.68
+meta.redis.port=16375
+meta.redis.password=456
