--- a/ex-fund-account/src/main/resources/application.properties
+++ b/ex-fund-account/src/main/resources/application.properties
@@ -12,12 +12,10 @@ hp.rocketmq.default.consumer.group=fund-account
 
 #Hikari
 spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://gte.cforcheswgwm.ap-northeast-1.rds.amazonaws.com:3306/expv3_fund?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.hikari.primary.username=pc
-spring.datasource.hikari.primary.password=pI0DUR3J2Gyfb923Y8yX
+spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://localhost:3306/expv3_fund?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.hikari.primary.username=test
+spring.datasource.hikari.primary.password=123456
 
-
-#Hikari-primary
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.primary.minimum-idle=5
 spring.datasource.hikari.primary.maximum-pool-size=15
@@ -31,7 +29,7 @@ spring.datasource.hikari.primary.connection-init-sql=set names utf8mb4;
 
 #id
 id.generator.dataCenterId=0
-id.generator.serverId=1
+id.generator.serverId=0
 
 #bys
 bys.server.host=http://192.168.0.13:7080/api/v1
