--- a/ex-fund-account/src/main/resources/application-prod.properties
+++ b/ex-fund-account/src/main/resources/application-prod.properties
@@ -3,8 +3,8 @@ app.registry.eureka.url=http://eureka:HpyMV63TDu2y@172.31.42.82:8761/eureka/
 
 #db
 spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://gte.cforcheswgwm.ap-northeast-1.rds.amazonaws.com:3306/expv3_fund?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.hikari.primary.username=pc
-spring.datasource.hikari.primary.password=pI0DUR3J2Gyfb923Y8yX
+spring.datasource.hikari.primary.username=fund
+spring.datasource.hikari.primary.password=DUR3J2Gyfb923Y834cP
 
 #mq
 hp.rocketmq.namesrvAddr=172.31.5.60:9876;172.31.14.83:9876
