--- a/ex-pc-extend/src/main/resources/application-prod.properties
+++ b/ex-pc-extend/src/main/resources/application-prod.properties
@@ -3,7 +3,7 @@ app.registry.eureka.url=http://eureka:HpyMV63TDu2y@172.31.42.82:8761/eureka/
 
 #db
 spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://gte.cforcheswgwm.ap-northeast-1.rds.amazonaws.com:3306/expv3_pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.hikari.primary.username=pc
+spring.datasource.hikari.primary.username=pcext
 spring.datasource.hikari.primary.password=DUR3J2Gyfb923Y834cP
 
 #mq
