--- a/ex-pc-extend/src/main/resources/application.properties
+++ b/ex-pc-extend/src/main/resources/application.properties
@@ -19,7 +19,6 @@ spring.datasource.hikari.primary.username=test
 spring.datasource.hikari.primary.password=123456
 
 
-
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.primary.minimum-idle=5
 spring.datasource.hikari.primary.maximum-pool-size=15
@@ -30,6 +29,10 @@ spring.datasource.hikari.primary.max-lifetime=1800000
 spring.datasource.hikari.primary.connection-timeout=30000
 spring.datasource.hikari.primary.connection-test-query=SELECT 1
 spring.datasource.hikari.primary.connection-init-sql=set names utf8mb4;
+
+#id
+id.generator.dataCenterId=0
+id.generator.serverId=2
 
 #redis
 meta.redis.host=${spring.redis.host}
