--- a/ex-pc-base/src/main/resources/application-prod.properties
+++ b/ex-pc-base/src/main/resources/application-prod.properties
@@ -16,3 +16,6 @@ spring.cache.type=redis
 spring.redis.host=prod-gte.f65mmb.ng.0001.apne1.cache.amazonaws.com
 spring.redis.port=6379
 spring.redis.password=
+
+#cron
+cron.liq=0/5 * * * * ?
