--- a/ex-pc-base/src/main/resources/application-local.properties
+++ b/ex-pc-base/src/main/resources/application-local.properties
@@ -6,16 +6,19 @@ hp.rocketmq.instanceName=w1
 #eureka
 #eureka.instance.ip-address=127.0.0.1
 eureka.instance.namespace=w1
-
+eureka.client.registerWithEureka=false
+eureka.client.fetchRegistry=false
 
 #db
 spring.datasource.hikari.primary.username=expv3
 spring.datasource.hikari.primary.password=root1234
 
 #cron
-cron.liq=0 0/10 * * * ?
+cron.liq=0 0 * * * ?
 
 #redis
 meta.redis.host=192.168.0.68
 meta.redis.port=16375
 meta.redis.password=456
+
+
