--- a/ex-fund-account/src/main/resources/application.properties
+++ b/ex-fund-account/src/main/resources/application.properties
@@ -12,7 +12,7 @@ hp.rocketmq.default.consumer.group=fund-account
 
 #Hikari
 spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://localhost:3306/expv3_fund?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://localhost:3306/expv3-fund?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.hikari.primary.username=test
 spring.datasource.hikari.primary.password=123456
 
