add rebase enum

--- a/ex-pc-match/src/main/resources/configs/application-local.properties
+++ b/ex-pc-match/src/main/resources/configs/application-local.properties
@@ -34,7 +34,7 @@ pcmatch.rediskey.pcOrderMatchedQueueSizeRedisKeyPattern=size
 
 pcmatch.rediskey.pcContractPattern=pc_contract
 
-log.dir=d:/logs/pcmatch3/
+log.dir=d:/logs/pcmatch_${pcmatch.matchGroupId}
 
 suffix=v3-local
 
