--- a/ex-bb-match/pom.xml
+++ b/ex-bb-match/pom.xml
@@ -6,16 +6,16 @@
     <groupId>com.hp.sh</groupId>
     <artifactId>ex-bb-match</artifactId>
     <packaging>jar</packaging>
-    <description>永续合约-撮合交易</description>
+    <description>现货-撮合交易</description>
     <version>3.0.0</version>
 
-<!--
-    <parent>
-        <groupId>com.hp.sh</groupId>
-        <artifactId>ex-parent</artifactId>
-        <version>3.0.0</version>
-    </parent>
--->
+    <!--
+        <parent>
+            <groupId>com.hp.sh</groupId>
+            <artifactId>ex-parent</artifactId>
+            <version>3.0.0</version>
+        </parent>
+    -->
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
