--- a/ex-bb-base/src/main/resources/application-local.properties
+++ b/ex-bb-base/src/main/resources/application-local.properties
@@ -9,16 +9,12 @@ eureka.instance.namespace=w1
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
 
-#db
-spring.datasource.hikari.primary.username=expv3
-spring.datasource.hikari.primary.password=root1234
-
 #cron
 cron.liq=0 0 * * * ?
 
 #redis
-meta.redis.host=192.168.0.68
-meta.redis.port=16375
-meta.redis.password=456
+meta.redis.host=127.0.0.1
+meta.redis.port=6379
+meta.redis.password=
 
 
