--- a/ex-fund-account/pom.xml
+++ b/ex-fund-account/pom.xml
@@ -32,6 +32,12 @@
 			<artifactId>ex-pc-base-def</artifactId>
 			<version>3.0.0-SNAPSHOT</version>
 		</dependency>
+		
+		<dependency>
+			<groupId>com.hp.sh.expv3</groupId>
+			<artifactId>ex-bb-base-def</artifactId>
+			<version>3.0.0-SNAPSHOT</version>
+		</dependency>
 
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
