--- a/ex-bb-base/src/main/resources/application.properties
+++ b/ex-bb-base/src/main/resources/application.properties
@@ -7,7 +7,7 @@ feign.hystrix.enabled=false
 #mq
 hp.rocketmq.enabled=true
 hp.rocketmq.createConsumer=false
-hp.rocketmq.namesrvAddr=192.168.0.73:9876;192.168.0.74:9876
+hp.rocketmq.namesrvAddr=127.0.0.1:9876
 hp.rocketmq.namespace=exp_v3
 hp.rocketmq.instanceName=1
 hp.rocketmq.default_consumer.group=ex-bb-base
@@ -62,6 +62,3 @@ redis.poolConfig.testOnReturn=true
 #pc
 pc.mq.consumer.contractGroup=1
 
-
-#cron
-cron.liq=0/5 * * * * ?
