--- a/ex-bb-base/src/main/resources/application-local.properties
+++ b/ex-bb-base/src/main/resources/application-local.properties
@@ -1,6 +1,8 @@
 #swagger
 swagger.host=
 
+#hp.rocketmq.namesrvAddr=hupa.7766.org:9876
+hp.rocketmq.namesrvAddr=127.0.0.1:9876
 hp.rocketmq.namespace=exp_v3-local
 hp.rocketmq.instanceName=w1
 #eureka
