--- a/ex-bb-extend/src/main/resources/application-local.properties
+++ b/ex-bb-extend/src/main/resources/application-local.properties
@@ -12,7 +12,7 @@ hp.rocketmq.namespace=exp_v3-local
 hp.rocketmq.createConsumer=false
 
 #db
-spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://localhost:3306/expv3-pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://localhost:3306/expv3_bb?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.hikari.primary.username=expv3
 spring.datasource.hikari.primary.password=root1234
 
