--- a/ex-bb-extend/src/main/resources/application.properties
+++ b/ex-bb-extend/src/main/resources/application.properties
@@ -9,14 +9,14 @@ hp.rocketmq.enabled=true
 hp.rocketmq.namesrvAddr=192.168.0.73:9876;192.168.0.74:9876
 hp.rocketmq.namespace=exp_v3
 hp.rocketmq.instanceName=1
-hp.rocketmq.default_consumer.group=ex-pc-extend
-hp.rocketmq.default_producer.group=ex-pc-extend
+hp.rocketmq.default_consumer.group=ex-bb-extend
+hp.rocketmq.default_producer.group=ex-bb-extend
 
 #Hikari
-spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://localhost:3306/expv3_bb?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
-spring.datasource.hikari.primary.username=test
-spring.datasource.hikari.primary.password=123456
+#spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
+##spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://localhost:3306/expv3_bb?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+##spring.datasource.hikari.primary.username=test
+##spring.datasource.hikari.primary.password=123456
 
 
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
