--- a/ex-bb-match/src/main/resources/configs/application-dev.properties
+++ b/ex-bb-match/src/main/resources/configs/application-dev.properties
@@ -19,7 +19,7 @@ bbmatch.rmq.bbMatchProducerInstanceName=bbMatchProducer_${bbmatch.id.serverId}
 bbmatch.rmq.bbMatchTopicNamePattern=bbMatch_${asset}__${symbol}
 
 bbmatch.rediskey.bbOrderSnapshotRedisKeyPattern=bbOrderSnapshot:${asset}:${symbol}
-bbmatch.rediskey.bbOrderSentMqOffsetRedisKeyPattern=orderSentMqOffset:${asset}:${symbol}
+bbmatch.rediskey.bbOrderSentMqOffsetRedisKeyPattern=bbOrderSentMqOffset:${asset}:${symbol}
 bbmatch.rediskey.bbBookChannelRedisKeyPattern=bb:book:${asset}:${symbol}
 bbmatch.rediskey.bbTradeChannelRedisKeyPattern=bb:trade:${asset}:${symbol}
 
@@ -32,7 +32,7 @@ bbmatch.rediskey.bbSymbolPattern=bb_symbol
 
 log.dir=/root/logs/bbmatch_${bbmatch.matchGroupId}
 
-suffix=v3
+suffix=v3-local
 
 rmq.nameSrvAddr=192.168.0.73:9876;192.168.0.74:9876
 rmq.nameSpace=exp_${suffix}
