--- a/ex-bb-match/src/main/resources/configs/application-test.properties
+++ b/ex-bb-match/src/main/resources/configs/application-test.properties
@@ -32,7 +32,7 @@ bbmatch.rediskey.bbSymbolPattern=bb_symbol
 
 log.dir=/root/logs/bbmatch_${bbmatch.matchGroupId}
 
-suffix=v3-local
+suffix=v3
 
 rmq.nameSrvAddr=192.168.0.73:9876;192.168.0.74:9876
 rmq.nameSpace=exp_${suffix}
@@ -46,7 +46,7 @@ bbmatch.trade.batchSize=2
 
 bbmatch.redis.hostName=192.168.0.68
 bbmatch.redis.password=456
-bbmatch.redis.port=16373
+bbmatch.redis.port=16375
 bbmatch.redis.database=2
 bbmatch.redis.timeout=6000
 bbmatch.redis.minIdle=5
