--- a/ex-pc-base/pom.xml
+++ b/ex-pc-base/pom.xml
@@ -27,6 +27,12 @@
 			<version>3.0.0-SNAPSHOT</version>
 		</dependency>
 		
+		<dependency>
+			<groupId>com.hp.sh.expv3</groupId>
+			<artifactId>ex-fund-account-def</artifactId>
+			<version>3.0.0-SNAPSHOT</version>
+		</dependency>
+		
 	</dependencies>
 	
 
