--- a/ex-bb-extend/pom.xml
+++ b/ex-bb-extend/pom.xml
@@ -26,7 +26,13 @@
 			<artifactId>ex-bb-extend-def</artifactId>
 			<version>3.0.0-SNAPSHOT</version>
 		</dependency>
-		
+
+        <dependency>
+        <groupId>com.hp.sh.expv3</groupId>
+		<artifactId>ex-bb-base</artifactId>
+		<version>3.0.0-SNAPSHOT</version>
+        </dependency>
+
 		<dependency>
 			<groupId>com.hp.sh.expv3</groupId>
 			<artifactId>ex-bb-base-jar</artifactId>
