--- a/ex-bb-extend/pom.xml
+++ b/ex-bb-extend/pom.xml
@@ -28,14 +28,14 @@
 		</dependency>
 
 
-		<dependency>
-			<groupId>com.hp.sh.expv3</groupId>
-			<artifactId>ex-bb-base-jar</artifactId>
-			<version>3.0.0-SNAPSHOT</version>
-		</dependency>
+		<!--<dependency>-->
+			<!--<groupId>com.hp.sh.expv3</groupId>-->
+			<!--<artifactId>ex-bb-base-jar</artifactId>-->
+			<!--<version>3.0.0-SNAPSHOT</version>-->
+		<!--</dependency>-->
 
 
-	</dependencies>
+    </dependencies>
 	
 
 </project>
