--- a/ex-bb-base/src/main/resources/application-local.properties
+++ b/ex-bb-base/src/main/resources/application-local.properties
@@ -8,8 +8,8 @@ hp.rocketmq.instanceName=w1
 #eureka
 #eureka.instance.ip-address=127.0.0.1
 eureka.instance.namespace=w1
-eureka.client.registerWithEureka=false
-eureka.client.fetchRegistry=false
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
 
 #cron
 cron.liq=0 0 * * * ?
