--- a/ex-bb-extend/pom.xml
+++ b/ex-bb-extend/pom.xml
@@ -28,11 +28,18 @@
 		</dependency>
 
 
-		<!--<dependency>-->
-			<!--<groupId>com.hp.sh.expv3</groupId>-->
-			<!--<artifactId>ex-bb-base-jar</artifactId>-->
-			<!--<version>3.0.0-SNAPSHOT</version>-->
-		<!--</dependency>-->
+
+		<dependency>
+			<groupId>com.hp.sh.expv3</groupId>
+			<artifactId>ex-bb-base-jar</artifactId>
+			<version>3.0.0-SNAPSHOT</version>
+		</dependency>
+        <dependency>
+            <groupId>com.hp.sh.expv3</groupId>
+            <artifactId>ex-bb-base</artifactId>
+            <version>3.0.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
 
     </dependencies>
