--- a/ex-bb-extend/pom.xml
+++ b/ex-bb-extend/pom.xml
@@ -27,11 +27,12 @@
 			<version>3.0.0-SNAPSHOT</version>
 		</dependency>
 
-        <dependency>
+        <!--<dependency>
             <groupId>com.hp.sh.expv3</groupId>
             <artifactId>ex-bb-base</artifactId>
             <version>3.0.0-SNAPSHOT</version>
-        </dependency>
+            <scope>compile</scope>
+        </dependency>-->
 
 
     </dependencies>
