--- a/ex-bb-extend/pom.xml
+++ b/ex-bb-extend/pom.xml
@@ -27,6 +27,16 @@
 			<version>3.0.0-SNAPSHOT</version>
 		</dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+
         <!--<dependency>
             <groupId>com.hp.sh.expv3</groupId>
             <artifactId>ex-bb-base</artifactId>
