--- a/ex-bb-extend/src/main/resources/application.properties
+++ b/ex-bb-extend/src/main/resources/application.properties
@@ -34,15 +34,17 @@ spring.datasource.hikari.primary.connection-init-sql=set names utf8mb4;
 id.generator.dataCenterId=0
 id.generator.serverId=2
 
+
+
 #redis
 meta.redis.host=${spring.redis.host}
 meta.redis.port=${spring.redis.port}
 meta.redis.password=${spring.redis.password}
-
 spring.cache.type=redis
-spring.redis.host=localhost
+spring.redis.host=127.0.0.1
 spring.redis.port=6379
 spring.redis.password=
+
 spring.redis.pool.max-active=1000
 spring.redis.pool.max-wait=5000
 spring.redis.pool.max-idle=256
