--- a/ex-bb-base/src/main/resources/application-local.properties
+++ b/ex-bb-base/src/main/resources/application-local.properties
@@ -2,7 +2,8 @@
 swagger.host=
 
 #hp.rocketmq.namesrvAddr=hupa.7766.org:9876
-hp.rocketmq.namesrvAddr=127.0.0.1:9876
+hp.rocketmq.namesrvAddr=192.168.0.73:9876;192.168.0.74:9876
+#hp.rocketmq.namesrvAddr=127.0.0.1:9876
 hp.rocketmq.namespace=exp_v3-local
 hp.rocketmq.instanceName=w1
 #eureka
