--- a/ex-bb-extend/src/main/resources/application.properties
+++ b/ex-bb-extend/src/main/resources/application.properties
@@ -34,6 +34,9 @@ spring.datasource.hikari.primary.connection-init-sql=set names utf8mb4;
 id.generator.dataCenterId=0
 id.generator.serverId=2
 
+kline.redis.host=127.0.0.1
+kline.redis.port=6379
+kline.redis.password=
 
 
 #redis
@@ -41,9 +44,9 @@ meta.redis.host=${spring.redis.host}
 meta.redis.port=${spring.redis.port}
 meta.redis.password=${spring.redis.password}
 spring.cache.type=redis
-spring.redis.host=127.0.0.1
-spring.redis.port=6379
-spring.redis.password=
+spring.redis.host=192.168.0.68
+spring.redis.port=16375
+spring.redis.password=456
 
 spring.redis.pool.max-active=1000
 spring.redis.pool.max-wait=5000
