--- a/ex-bb-extend/src/main/resources/application-bai.properties
+++ b/ex-bb-extend/src/main/resources/application-bai.properties
@@ -56,6 +56,10 @@ spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_b
 spring.datasource.hikari.primary.username=root
 spring.datasource.hikari.primary.password=root1234
 
+kline.redis.host=127.0.0.1
+kline.redis.port=6379
+kline.redis.password=
+
 #redis
 spring.cache.type=redis
 meta.redis.host=${spring.redis.host}
