--- a/ex-bb-extend/src/main/resources/application-dev.properties
+++ b/ex-bb-extend/src/main/resources/application-dev.properties
@@ -5,6 +5,11 @@ spring.datasource.hikari.primary.password=root1234
 #swagger
 swagger.host=
 
+
+kline.redis.host=192.168.0.68
+kline.redis.port=16375
+kline.redis.password=456
+
 bb.kline.trigger.pattern=bb:kline:trigger:%{asset}:%{symbol}:%{freq}
 bb.trade.pattern=bb:trade:%{asset}:%{symbol}
 bb.kline.update=bb:kline:update:%{asset}:%{symbol}:%{freq}
