--- a/ex-bb-extend/src/main/resources/application-bai.properties
+++ b/ex-bb-extend/src/main/resources/application-bai.properties
@@ -5,10 +5,18 @@ swagger.host=localhost:${app.server.port}
 
 hp.rocketmq.namespace=exp_v3-local
 
+bb.kline.supportFrequenceString=1,5,10,15,30,60,360,1440
+bb.kline.triggerBatchSize=20
+bb.kline.bbGroupIds=1
+
+
 bb.kline.trigger.pattern=bb:kline:trigger:%{asset}:%{symbol}:%{freq}
 bb.trade.pattern=bb:trade:%{asset}:%{symbol}
 bb.kline.update=bb:kline:update:%{asset}:%{symbol}:%{freq}
 bb.kline=bb:kline:%{asset}:%{symbol}:%{freq}
+bb.kline.task=kline:task:from_exp:BB:%{asset}:%{symbol}
+bb.kline.repair=kline:repair:from_exp:BB:%{asset}:%{symbol}:%{freq}
+bb.kline.notifyUpdate=
 
 bbextend.redis.hostName=192.168.0.190
 bbextend.redis.password=456
