--- a/ex-bb-extend/src/main/resources/application-dev.properties
+++ b/ex-bb-extend/src/main/resources/application-dev.properties
@@ -5,6 +5,9 @@ spring.datasource.hikari.primary.password=root1234
 #swagger
 swagger.host=
 
+bb.kline.supportFrequenceString=1,5,10,15,30,60,360,1440
+bb.kline.triggerBatchSize=20
+bb.kline.bbGroupIds=1
 
 kline.redis.host=192.168.0.68
 kline.redis.port=16375
