--- a/ex-bb-kline/pom.xml
+++ b/ex-bb-kline/pom.xml
@@ -3,9 +3,9 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-	<artifactId>ex-pc-extend</artifactId>
+	<artifactId>ex-bb-kline</artifactId>
 	<packaging>jar</packaging>
-    <description>永续合约扩展服务</description>
+    <description>币币基础服务</description>
 
 	<parent>
 		<groupId>com.hp.sh.expv3</groupId>
@@ -21,26 +21,6 @@
 			<version>3.0.0-SNAPSHOT</version>
 		</dependency>
 		
-		<dependency>
-			<groupId>com.hp.sh.expv3</groupId>
-			<artifactId>ex-pc-extend-def</artifactId>
-			<version>3.0.0-SNAPSHOT</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>com.hp.sh.expv3</groupId>
-			<artifactId>ex-pc-base-jar</artifactId>
-			<version>3.0.0-SNAPSHOT</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>com.hp.sh.expv3</groupId>
-			<artifactId>ex-bb-base-def</artifactId>
-			<version>3.0.0-SNAPSHOT</version>
-			<scope>test</scope>
-		</dependency>
-
-
 	</dependencies>
 	
 
