--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,8 @@
 
 		<module>ex-bb-extend</module>
 		<module>ex-bb-extend-def</module>
+
+		<module>ex-bb-kline</module>
 	</modules>
 
     <dependencies>
