--- a/ex-bb-kline/src/main/resources/application-dev.properties
+++ b/ex-bb-kline/src/main/resources/application-dev.properties
@@ -13,10 +13,21 @@ kline.redis.host=192.168.0.68
 kline.redis.port=16375
 kline.redis.password=456
 
-bb.kline.trigger.pattern=bb:kline:trigger:%{asset}:%{symbol}:%{freq}
+# pubsub ongoing trade
 bb.trade.pattern=bb:trade:%{asset}:%{symbol}
-bb.kline.update=bb:kline:update:%{asset}:%{symbol}:%{freq}
+
+#bb.kline.trigger.pattern=bb:kline:trigger:%{asset}:%{symbol}:%{freq}
+bb.kline.updateEventPattern=bb:kline:updateEvent:%{asset}:%{symbol}:%{freq}
+# bb kline data pattern
 bb.kline=bb:kline:%{asset}:%{symbol}:%{freq}
+
+# third data
+kline.bb.thirdDataPattern=kline:bb:thirdData:%{asset}:%{symbol}:%{freq}
+kline.bb.thirdDataUpdateEventPattern=kline:bb:thirdDataUpdateEvent:%{asset}:%{symbol}
+
+bb.kline.task=kline:task:bb:from_exp:%{asset}:%{symbol}
+bb.kline.repair=kline:repair:bb:from_exp:%{asset}:%{symbol}:%{freq}
+bb.kline.notifyUpdate=
 
 bbextend.redis.hostName=192.168.0.190
 bbextend.redis.password=456
