kline数据格式转化前

--- a/ex-bb-kline/src/main/resources/application-bai.properties
+++ b/ex-bb-kline/src/main/resources/application-bai.properties
@@ -8,6 +8,8 @@ hp.rocketmq.namespace=exp_v3-local
 bb.kline.supportFrequenceString=1,5,10,15,30,60,360,1440
 bb.kline.triggerBatchSize=20
 bb.kline.bbGroupIds=1
+bb.kline.ongoingCalc.enable=1
+bb.kline.ongoingMerge.enable=0
 
 # pubsub ongoing trade
 bb.trade.pattern=bb:trade:%{asset}:%{symbol}
