--- a/ex-bb-kline/src/main/resources/application-dev.properties
+++ b/ex-bb-kline/src/main/resources/application-dev.properties
@@ -8,6 +8,8 @@ swagger.host=
 bb.kline.supportFrequenceString=1,5,10,15,30,60,360,1440
 bb.kline.triggerBatchSize=20
 bb.kline.bbGroupIds=1
+bb.kline.ongoingCalc.enable=1
+bb.kline.ongoingMerge.enable=1
 
 kline.redis.host=192.168.0.68
 kline.redis.port=16375
