kline重复代码抽取优化

--- a/ex-bb-kline/src/main/resources/application-bai.properties
+++ b/ex-bb-kline/src/main/resources/application-bai.properties
@@ -7,9 +7,10 @@ hp.rocketmq.namespace=exp_v3-local
 
 bb.kline.supportFrequenceString=1,5,10,15,30,60,360,1440
 bb.kline.triggerBatchSize=20
+bb.kline.thirdBatchSize=100
 bb.kline.bbGroupIds=1
 bb.kline.ongoingCalc.enable=1
-bb.kline.ongoingMerge.enable=0
+bb.kline.ongoingMerge.enable=1
 
 # pubsub ongoing trade
 bb.trade.pattern=bb:trade:%{asset}:%{symbol}
@@ -21,7 +22,7 @@ bb.kline=bb:kline:%{asset}:%{symbol}:%{freq}
 
 # third data
 kline.bb.thirdDataPattern=kline:bb:thirdData:%{asset}:%{symbol}:%{freq}
-kline.bb.thirdDataUpdateEventPattern=kline:bb:thirdDataUpdateEvent:%{asset}:%{symbol}
+kline.bb.thirdDataUpdateEventPattern=kline:bb:thirdDataUpdateEvent:%{asset}:%{symbol}:%{freq}
 
 bb.kline.task=kline:task:bb:from_exp:%{asset}:%{symbol}
 bb.kline.repair=kline:repair:bb:from_exp:%{asset}:%{symbol}:%{freq}
