--- a/ex-bb-kline/src/main/resources/application-dev.properties
+++ b/ex-bb-kline/src/main/resources/application-dev.properties
@@ -25,7 +25,7 @@ bb.kline=bb:kline:%{asset}:%{symbol}:%{freq}
 
 # third data
 kline.bb.thirdDataPattern=kline:bb:thirdData:%{asset}:%{symbol}:%{freq}
-kline.bb.thirdDataUpdateEventPattern=kline:bb:thirdDataUpdateEvent:%{asset}:%{symbol}
+kline.bb.thirdDataUpdateEventPattern=kline:bb:thirdDataUpdateEvent:%{asset}:%{symbol}:%{freq}
 
 bb.kline.task=kline:task:bb:from_exp:%{asset}:%{symbol}
 bb.kline.repair=kline:repair:bb:from_exp:%{asset}:%{symbol}:%{freq}
