kline第三方数据

--- a/ex-bb-kline/src/main/resources/application-dev.properties
+++ b/ex-bb-kline/src/main/resources/application-dev.properties
@@ -6,10 +6,12 @@ spring.datasource.hikari.primary.password=root1234
 swagger.host=
 
 bb.kline.supportFrequenceString=1,5,10,15,30,60,360,1440
-bb.kline.triggerBatchSize=20
+bb.kline.triggerBatchSize=1440
+bb.kline.thirdBatchSize=1440
 bb.kline.bbGroupIds=1
-bb.kline.ongoingCalc.enable=1
-bb.kline.ongoingMerge.enable=1
+bb.kline.ongoingCalc.enable=0
+bb.kline.ongoingMerge.enable=0
+bb.kline.thirdUpdate.enable=1
 
 kline.redis.host=192.168.0.68
 kline.redis.port=16375
