--- a/ex-bb-kline/src/main/resources/application-bai.properties
+++ b/ex-bb-kline/src/main/resources/application-bai.properties
@@ -6,11 +6,12 @@ swagger.host=localhost:${app.server.port}
 hp.rocketmq.namespace=exp_v3-local
 
 bb.kline.supportFrequenceString=1,5,10,15,30,60,360,1440
-bb.kline.triggerBatchSize=20
-bb.kline.thirdBatchSize=100
+bb.kline.triggerBatchSize=1440
+bb.kline.thirdBatchSize=1440
 bb.kline.bbGroupIds=1
-bb.kline.ongoingCalc.enable=1
+bb.kline.ongoingCalc.enable=0
 bb.kline.ongoingMerge.enable=1
+bb.kline.thirdUpdate.enable=1
 
 # pubsub ongoing trade
 bb.trade.pattern=bb:trade:%{asset}:%{symbol}
