kline 1分钟历史数据

--- a/ex-bb-kline/src/main/resources/application-bai.properties
+++ b/ex-bb-kline/src/main/resources/application-bai.properties
@@ -8,10 +8,12 @@ hp.rocketmq.namespace=exp_v3-local
 bb.kline.supportFrequenceString=1,5,10,15,30,60,360,1440
 bb.kline.triggerBatchSize=1440
 bb.kline.thirdBatchSize=1440
+bb.kline.expHistoryBatchSize=1440
 bb.kline.bbGroupIds=1
-bb.kline.ongoingCalc.enable=0
+bb.kline.ongoingCalc.enable=1
 bb.kline.ongoingMerge.enable=1
 bb.kline.thirdUpdate.enable=1
+bb.kline.expHistory.enable=1
 
 # pubsub ongoing trade
 bb.trade.pattern=bb:trade:%{asset}:%{symbol}
@@ -25,9 +27,10 @@ bb.kline=bb:kline:%{asset}:%{symbol}:%{freq}
 kline.bb.thirdDataPattern=kline:bb:thirdData:%{asset}:%{symbol}:%{freq}
 kline.bb.thirdDataUpdateEventPattern=kline:bb:thirdDataUpdateEvent:%{asset}:%{symbol}:%{freq}
 
-bb.kline.task=kline:task:bb:from_exp:%{asset}:%{symbol}
-bb.kline.repair=kline:repair:bb:from_exp:%{asset}:%{symbol}:%{freq}
-bb.kline.notifyUpdate=
+#Exp \u5E73\u53F0\u5386\u53F2
+bb.kline.task=kline:task:from_exp:BB:%{asset}:%{symbol}:%{freq}
+bb.kline.repair=kline:from_exp:repair:BB:%{asset}:%{symbol}:%{freq}
+bb.kline.notifyUpdate=kline:from_exp:update:BB:%{asset}:%{symbol}:%{freq}
 
 bbextend.redis.hostName=192.168.0.190
 bbextend.redis.password=456
