--- a/ex-bb-kline/pom.xml
+++ b/ex-bb-kline/pom.xml
@@ -37,7 +37,10 @@
             <artifactId>ex-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
 	</dependencies>
 	
 
