--- a/ex-bb-extend/src/main/resources/application.properties
+++ b/ex-bb-extend/src/main/resources/application.properties
@@ -18,6 +18,9 @@ hp.rocketmq.default_producer.group=ex-bb-extend
 ##spring.datasource.hikari.primary.username=test
 ##spring.datasource.hikari.primary.password=123456
 
+kline.redis.host=127.0.0.1
+kline.redis.port=6379
+kline.redis.password=
 
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.hikari.primary.minimum-idle=5
