--- a/ex-bb-kline/src/main/resources/application-dev.properties
+++ b/ex-bb-kline/src/main/resources/application-dev.properties
@@ -10,10 +10,12 @@ bb.kline.triggerBatchSize=1440
 bb.kline.thirdBatchSize=1440
 bb.kline.expHistoryBatchSize=200
 bb.kline.bbGroupIds=1
-bb.kline.ongoingCalc.enable=1
-bb.kline.ongoingMerge.enable=1
-bb.kline.thirdUpdate.enable=1
+bb.kline.ongoingCalc.enable=0
+bb.kline.ongoingMerge.enable=0
+bb.kline.thirdUpdate.enable=0
 bb.kline.expHistory.enable=1
+bb.kline.expHistoryCoverByTradeFromExp.enable=1
+
 
 kline.redis.host=192.168.0.68
 kline.redis.port=16375
@@ -32,9 +34,13 @@ kline.bb.thirdDataPattern=kline:bb:thirdData:%{asset}:%{symbol}:%{freq}
 kline.bb.thirdDataUpdateEventPattern=kline:bb:thirdDataUpdateEvent:%{asset}:%{symbol}:%{freq}
 
 #Exp \u5E73\u53F0\u5386\u53F2
-bb.kline.task=kline:task:from_exp:BB:%{asset}:%{symbol}:%{freq}
-bb.kline.repair=kline:from_exp:repair:BB:%{asset}:%{symbol}:%{freq}
-bb.kline.notifyUpdate=kline:from_exp:update:BB:%{asset}:%{symbol}:%{freq}
+#bb.kline.task=kline:task:from_exp:BB:%{asset}:%{symbol}:%{freq}
+#bb.kline.repair=kline:from_exp:repair:BB:%{asset}:%{symbol}:%{freq}
+#bb.kline.notifyUpdate=kline:from_exp:update:BB:%{asset}:%{symbol}:%{freq}
+
+from_exp.bbKlineTaskPattern=from_exp:bbKlineTask:%{asset}:%{symbol}:%{freq}
+from_exp.bbKlineDataPattern=from_exp:bbKlineData:%{asset}:%{symbol}:%{freq}
+from_exp.bbKlineDataUpdateEventPattern=from_exp:bbKlineDataUpdateEvent:%{asset}:%{symbol}:%{freq}
 
 bbextend.redis.hostName=192.168.0.190
 bbextend.redis.password=456
