配置文件修改

--- a/ex-bb-kline/src/main/resources/application-bai.properties
+++ b/ex-bb-kline/src/main/resources/application-bai.properties
@@ -8,7 +8,7 @@ hp.rocketmq.namespace=exp_v3-local
 bb.kline.supportFrequenceString=1,5,10,15,30,60,360,1440
 bb.kline.triggerBatchSize=1440
 bb.kline.thirdBatchSize=1440
-bb.kline.expHistoryBatchSize=200
+bb.kline.expHistoryBatchSize=1440
 bb.kline.bbGroupIds=1
 bb.kline.ongoingCalc.enable=1
 bb.kline.ongoingMerge.enable=1
