--- a/ex-bb-kline/src/main/resources/application-dev.properties
+++ b/ex-bb-kline/src/main/resources/application-dev.properties
@@ -8,13 +8,17 @@ swagger.host=
 bb.kline.supportFrequenceString=1,5,10,15,30,60,360,1440
 bb.kline.triggerBatchSize=1440
 bb.kline.thirdBatchSize=1440
-bb.kline.expHistoryBatchSize=200
+bb.kline.expHistoryBatchSize=1440
 bb.kline.bbGroupIds=1
 bb.kline.ongoingCalc.enable=1
 bb.kline.ongoingMerge.enable=1
-bb.kline.thirdUpdate.enable=1
-bb.kline.expHistory.enable=1
-bb.kline.expHistoryCoverByTradeFromExp.enable=1
+#bb.kline.thirdUpdate.enable=0
+#bb.kline.expHistory.enable=0
+# bb.kline.expHistoryCoverByTradeFromExp.enable=1
+
+bb.kline.bbKlineThirdCoverEnable=1
+bb.kline.bbKlineFromExpCalcEnable=1
+bb.kline.bbKlineFromExpCoverEnable=1
 
 
 kline.redis.host=192.168.0.68
