配置文件修改

--- a/ex-bb-kline/src/main/resources/application-prod.properties
+++ b/ex-bb-kline/src/main/resources/application-prod.properties
@@ -26,9 +26,9 @@ bb.kline.bbKlineFromExpCalcEnable=1
 bb.kline.bbKlineFromExpCoverEnable=1
 
 
-kline.redis.host=192.168.0.68
-kline.redis.port=16375
-kline.redis.password=456
+kline.redis.host=prod-gte.f65mmb.ng.0001.apne1.cache.amazonaws.com
+kline.redis.port=6379
+kline.redis.password=
 
 # pubsub ongoing trade
 bb.trade.pattern=bb:trade:%{asset}:%{symbol}
@@ -52,8 +52,8 @@ from_exp.bbKlineDataPattern=from_exp:bbKlineData:%{asset}:%{symbol}:%{freq}
 from_exp.bbKlineDataUpdateEventPattern=from_exp:bbKlineDataUpdateEvent:%{asset}:%{symbol}:%{freq}
 
 bbextend.redis.hostName=192.168.0.190
-bbextend.redis.password=456
-bbextend.redis.port=16379
+bbextend.redis.password=
+bbextend.redis.port=6379
 bbextend.redis.database=2
 bbextend.redis.timeout=6000
 bbextend.redis.minIdle=2
@@ -64,9 +64,9 @@ bbextend.redis.testOnBorrow=true
 bbextend.redis.testOnReturn=true
 bbextend.redis.testWhileIdle=true
 
-bbkline.ongoing.redis.hostName=192.168.0.68
-bbkline.ongoing.redis.password=456
-bbkline.ongoing.redis.port=16375
+bbkline.ongoing.redis.hostName=prod-gte.f65mmb.ng.0001.apne1.cache.amazonaws.com
+bbkline.ongoing.redis.password=
+bbkline.ongoing.redis.port=6379
 bbkline.ongoing.redis.database=5
 bbkline.ongoing.redis.timeout=6000
 bbkline.ongoing.redis.minIdle=2
@@ -77,9 +77,9 @@ bbkline.ongoing.redis.testOnBorrow=true
 bbkline.ongoing.redis.testOnReturn=true
 bbkline.ongoing.redis.testWhileIdle=true
 
-metadata.redis.hostName=192.168.0.68
-metadata.redis.password=456
-metadata.redis.port=16375
+metadata.redis.hostName=prod-gte.f65mmb.ng.0001.apne1.cache.amazonaws.com
+metadata.redis.password=
+metadata.redis.port=6379
 metadata.redis.database=0
 metadata.redis.timeout=6000
 metadata.redis.minIdle=2
