--- a/ex-pc-base/src/main/resources/application-dev.properties
+++ b/ex-pc-base/src/main/resources/application-dev.properties
@@ -1,4 +1,4 @@
-spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3-pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.hikari.primary.username=expv3
 spring.datasource.hikari.primary.password=root1234
 
