重复代码抽取成类

--- a/ex-bb-kline/src/main/resources/application-bai.properties
+++ b/ex-bb-kline/src/main/resources/application-bai.properties
@@ -10,9 +10,6 @@ bb.kline.triggerBatchSize=1440
 bb.kline.thirdBatchSize=1440
 bb.kline.expHistoryBatchSize=1440
 bb.kline.bbGroupIds=1
-#bb.kline.thirdUpdate.enable=0
-#bb.kline.expHistory.enable=0
-# bb.kline.expHistoryCoverByTradeFromExp.enable=1
 
 bb.kline.ongoingCalc.enable=1
 bb.kline.ongoingMerge.enable=1
@@ -33,13 +30,14 @@ kline.bb.thirdDataPattern=kline:bb:thirdData:%{asset}:%{symbol}:%{freq}
 kline.bb.thirdDataUpdateEventPattern=kline:bb:thirdDataUpdateEvent:%{asset}:%{symbol}:%{freq}
 
 #Exp \u5E73\u53F0\u5386\u53F2
-#bb.kline.task=kline:task:from_exp:BB:%{asset}:%{symbol}:%{freq}
-#bb.kline.repair=kline:from_exp:repair:BB:%{asset}:%{symbol}:%{freq}
-#bb.kline.notifyUpdate=kline:from_exp:update:BB:%{asset}:%{symbol}:%{freq}
-
 from_exp.bbKlineTaskPattern=from_exp:bbKlineTask:%{asset}:%{symbol}:%{freq}
 from_exp.bbKlineDataPattern=from_exp:bbKlineData:%{asset}:%{symbol}:%{freq}
 from_exp.bbKlineDataUpdateEventPattern=from_exp:bbKlineDataUpdateEvent:%{asset}:%{symbol}:%{freq}
+
+#\u76D1\u542C\u9700\u8981\u4FEE\u590Dkline\u7684\u4E8B\u4EF6
+bb.kline2Trade.taskPattern=bb.kline2Trade:%{asset}:%{symbol}:%{freq}
+
+
 
 bbkline.ongoing.redis.hostName=192.168.0.68
 bbkline.ongoing.redis.password=456
