--- a/ex-bb-kline/src/main/resources/application-bai.properties
+++ b/ex-bb-kline/src/main/resources/application-bai.properties
@@ -9,6 +9,7 @@ bb.kline.supportFrequenceString=1,5,10,15,30,60,360,1440
 bb.kline.triggerBatchSize=1440
 bb.kline.thirdBatchSize=1440
 bb.kline.expHistoryBatchSize=1440
+bb.kline.kline2TradeBatchSize=1440
 bb.kline.bbGroupIds=1
 
 bb.kline.ongoingCalc.enable=1
@@ -16,6 +17,8 @@ bb.kline.ongoingMerge.enable=1
 bb.kline.bbKlineThirdCoverEnable=1
 bb.kline.bbKlineFromExpCalcEnable=1
 bb.kline.bbKlineFromExpCoverEnable=1
+
+
 
 # pubsub ongoing trade
 bb.trade.pattern=bb:trade:%{asset}:%{symbol}
@@ -35,8 +38,7 @@ from_exp.bbKlineDataPattern=from_exp:bbKlineData:%{asset}:%{symbol}:%{freq}
 from_exp.bbKlineDataUpdateEventPattern=from_exp:bbKlineDataUpdateEvent:%{asset}:%{symbol}:%{freq}
 
 #\u76D1\u542C\u9700\u8981\u4FEE\u590Dkline\u7684\u4E8B\u4EF6
-bb.kline2Trade.taskPattern=bb.kline2Trade:%{asset}:%{symbol}:%{freq}
-
+bb.kline2Trade.taskEventPattern=bb:kline2Trade:%{asset}:%{symbol}:%{freq}
 
 
 bbkline.ongoing.redis.hostName=192.168.0.68
@@ -68,7 +70,7 @@ metadata.redis.testWhileIdle=true
 
 #Hikari
 spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_bb?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_bb?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
 spring.datasource.hikari.primary.username=root
 spring.datasource.hikari.primary.password=root1234
 
