修复kline某个时间点kline异常

--- a/ex-bb-kline/src/main/resources/application-prod.properties
+++ b/ex-bb-kline/src/main/resources/application-prod.properties
@@ -20,6 +20,7 @@ bb.kline.ongoingMerge.enable=1
 bb.kline.bbKlineThirdCoverEnable=1
 bb.kline.bbKlineFromExpCalcEnable=1
 bb.kline.bbKlineFromExpCoverEnable=1
+bb.kline.bbRepairTrade.enable=1
 
 # pubsub ongoing trade
 bb.trade.pattern=bb:trade:%{asset}:%{symbol}
