--- a/ex-bb-kline/src/main/resources/application-bai.properties
+++ b/ex-bb-kline/src/main/resources/application-bai.properties
@@ -12,12 +12,12 @@ bb.kline.expHistoryBatchSize=1440
 bb.kline.kline2TradeBatchSize=1440
 bb.kline.bbGroupIds=1
 
-bb.kline.ongoingCalc.enable=1
-bb.kline.ongoingMerge.enable=1
-bb.kline.bbKlineThirdCoverEnable=1
-bb.kline.bbKlineFromExpCalcEnable=1
-bb.kline.bbKlineFromExpCoverEnable=1
-
+bb.kline.ongoingCalc.enable=0
+bb.kline.ongoingMerge.enable=0
+bb.kline.bbKlineThirdCoverEnable=0
+bb.kline.bbKlineFromExpCalcEnable=0
+bb.kline.bbKlineFromExpCoverEnable=0
+bb.kline.bbRepairTrade.enable=1
 
 
 # pubsub ongoing trade
