--- a/ex-bb-match/src/main/resources/configs/application-prod.properties
+++ b/ex-bb-match/src/main/resources/configs/application-prod.properties
@@ -41,8 +41,8 @@ bbmatch.id.serverId=31
 bbmatch.id.caller=bbmatch
 
 bbmatch.matchGroupId=1
-
-bbmatch.trade.batchSize=2
+bbmatch.sendMatchBatchEnable=1
+bbmatch.tradeBatchSize=8
 
 bbmatch.redis.hostName=prod-gte.f65mmb.ng.0001.apne1.cache.amazonaws.com
 bbmatch.redis.password=
