--- a/ex-bb-match/src/main/resources/configs/application-dev.properties
+++ b/ex-bb-match/src/main/resources/configs/application-dev.properties
@@ -41,8 +41,8 @@ bbmatch.id.serverId=31
 bbmatch.id.caller=bbmatch
 
 bbmatch.matchGroupId=1
-
-bbmatch.trade.batchSize=2
+bbmatch.sendMatchBatchEnable=1
+bbmatch.tradeBatchSize=2
 
 bbmatch.redis.hostName=192.168.0.190
 bbmatch.redis.password=456
