change pc db name

--- a/ex-pc-match/src/main/resources/configs/application-local-test.properties
+++ b/ex-pc-match/src/main/resources/configs/application-local-test.properties
@@ -38,7 +38,7 @@ log.dir=/root/logs/pcmatch_${pcmatch.matchGroupId}
 
 suffix=v3
 
-spring.datasource.url=jdbc:mysql://192.168.0.190:3306/exp${suffix}-pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://192.168.0.190:3306/exp${suffix}_pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=root1234
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
