--- a/ex-pc-extend/pom.xml
+++ b/ex-pc-extend/pom.xml
@@ -39,7 +39,20 @@
 			<version>3.0.0-SNAPSHOT</version>
 			<scope>test</scope>
 		</dependency>
-
+		
+		<dependency>
+			<groupId>com.hp.sh.expv3</groupId>
+			<artifactId>ex-fund-account-def</artifactId>
+			<version>3.0.0-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
+		
+		<dependency>
+			<groupId>com.hp.sh.expv3</groupId>
+			<artifactId>ex-bb-extend-def</artifactId>
+			<version>3.0.0-SNAPSHOT</version>
+			<scope>test</scope>
+		</dependency>
 
 	</dependencies>
 	
