--- a/ex-bb-extend/src/main/resources/application-dev.properties
+++ b/ex-bb-extend/src/main/resources/application-dev.properties
@@ -1,3 +1,4 @@
+spring.datasource.hikari.primary.driver-class-name=com.mysql.jdbc.Driver
 spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_bb?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.hikari.primary.username=root
 spring.datasource.hikari.primary.password=root1234
