测试kline数据准确性

--- a/ex-bb-kline/src/main/resources/application-bai.properties
+++ b/ex-bb-kline/src/main/resources/application-bai.properties
@@ -27,6 +27,8 @@ bb.trade.pattern=bb:trade:%{asset}:%{symbol}
 bb.kline.updateEventPattern=bb:kline:updateEvent:%{asset}:%{symbol}:%{freq}
 # bb kline data pattern
 bb.kline=bb:kline:%{asset}:%{symbol}:%{freq}
+#bb.kline=candle:bb:%{asset}:%{symbol}:%{freq}
+
 
 # third data
 kline.bb.thirdDataPattern=kline:bb:thirdData:%{asset}:%{symbol}:%{freq}
