--- a/ex-pc-match/src/main/resources/configs/application-dev.properties
+++ b/ex-pc-match/src/main/resources/configs/application-dev.properties
@@ -50,8 +50,7 @@ pcmatch.id.serverId=31
 pcmatch.id.caller=pcmatch
 
 pcmatch.matchGroupId=1
-
-pcmatch.trade.batchSize=2
+pcmatch.saveTradeBatchSize=2
 
 pcmatch.redis.hostName=192.168.0.190
 pcmatch.redis.password=456
