--- a/ex-pc-match/src/main/resources/configs/application-prod.properties
+++ b/ex-pc-match/src/main/resources/configs/application-prod.properties
@@ -50,8 +50,7 @@ pcmatch.id.serverId=31
 pcmatch.id.caller=pcmatch
 
 pcmatch.matchGroupId=1
-
-pcmatch.trade.batchSize=2
+pcmatch.saveTradeBatchSize=8
 
 pcmatch.redis.hostName=prod-gte.f65mmb.ng.0001.apne1.cache.amazonaws.com
 pcmatch.redis.password=
