--- a/ex-bb-kline/src/main/resources/application-bai.properties
+++ b/ex-bb-kline/src/main/resources/application-bai.properties
@@ -26,8 +26,8 @@ bb.trade.pattern=bb:trade:%{asset}:%{symbol}
 #bb.kline.trigger.pattern=bb:kline:trigger:%{asset}:%{symbol}:%{freq}
 bb.kline.updateEventPattern=bb:kline:updateEvent:%{asset}:%{symbol}:%{freq}
 # bb kline data pattern
-bb.kline=bb:kline:%{asset}:%{symbol}:%{freq}
-#bb.kline=candle:bb:%{asset}:%{symbol}:%{freq}
+#bb.kline=bb:kline:%{asset}:%{symbol}:%{freq}
+bb.kline=candle:bb:%{asset}:%{symbol}:%{freq}
 
 
 # third data
