高开低收顺序写反

--- a/ex-bb-kline/src/main/resources/application-dev.properties
+++ b/ex-bb-kline/src/main/resources/application-dev.properties
@@ -13,7 +13,7 @@ bb.kline.kline2TradeBatchSize=1440
 
 bb.kline.bbGroupIds=1
 
-bb.kline.ongoingCalc.enable=1
+bb.kline.ongoingAppend.enable=1
 bb.kline.ongoingMerge.enable=1
 bb.kline.bbKlineThirdCoverEnable=1
 bb.kline.bbKlineFromExpCalcEnable=1
@@ -26,7 +26,8 @@ bb.trade.pattern=bb:trade:%{asset}:%{symbol}
 #bb.kline.trigger.pattern=bb:kline:trigger:%{asset}:%{symbol}:%{freq}
 bb.kline.updateEventPattern=bb:kline:updateEvent:%{asset}:%{symbol}:%{freq}
 # bb kline data pattern
-bb.kline=bb:kline:%{asset}:%{symbol}:%{freq}
+#bb.kline=bb:kline:%{asset}:%{symbol}:%{freq}
+bb.kline=candle:bb:%{asset}:%{symbol}:%{freq}
 
 # third data
 kline.bb.thirdDataPattern=kline:bb:thirdData:%{asset}:%{symbol}:%{freq}
