--- a/ex-bb-kline/src/main/resources/application-prod.properties
+++ b/ex-bb-kline/src/main/resources/application-prod.properties
@@ -15,7 +15,7 @@ bb.kline.triggerBatchSize=1440
 bb.kline.thirdBatchSize=1440
 bb.kline.expHistoryBatchSize=1440
 bb.kline.bbGroupIds=1
-bb.kline.ongoingCalc.enable=1
+bb.kline.ongoingAppend.enable=1
 bb.kline.ongoingMerge.enable=1
 bb.kline.bbKlineThirdCoverEnable=1
 bb.kline.bbKlineFromExpCalcEnable=1
@@ -28,7 +28,8 @@ bb.trade.pattern=bb:trade:%{asset}:%{symbol}
 #bb.kline.trigger.pattern=bb:kline:trigger:%{asset}:%{symbol}:%{freq}
 bb.kline.updateEventPattern=bb:kline:updateEvent:%{asset}:%{symbol}:%{freq}
 # bb kline data pattern
-bb.kline=bb:kline:%{asset}:%{symbol}:%{freq}
+#bb.kline=bb:kline:%{asset}:%{symbol}:%{freq}
+bb.kline=candle:bb:%{asset}:%{symbol}:%{freq}
 
 # third data
 kline.bb.thirdDataPattern=kline:bb:thirdData:%{asset}:%{symbol}:%{freq}
