--- a/ex-pc-base/src/main/resources/application.properties
+++ b/ex-pc-base/src/main/resources/application.properties
@@ -20,7 +20,7 @@ spring.datasource.hikari.primary.username=test
 spring.datasource.hikari.primary.password=123456
 
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.hikari.primary.minimum-idle=15
+spring.datasource.hikari.primary.minimum-idle=5
 spring.datasource.hikari.primary.maximum-pool-size=50
 spring.datasource.hikari.primary.auto-commit=true
 spring.datasource.hikari.primary.idle-timeout=300000
@@ -60,4 +60,7 @@ redis.poolConfig.testOnReturn=true
 
 
 #cron
-cron.liq=0/5 * * * * ?
+cron.liq.check=0/5 * * * * ?
+
+cron.liq.handle=0/5 * * * * ?
+
