c2c内网配置文件修改

--- a/ex-fund-account/src/main/resources/application-dev.properties
+++ b/ex-fund-account/src/main/resources/application-dev.properties
@@ -18,3 +18,14 @@ spring.cache.type=redis
 spring.redis.host=192.168.0.68
 spring.redis.port=16375
 spring.redis.password=456
+
+
+#c2c \u4EBA\u6C11\u5E01\u5BF9\u63A5
+cnyPlpay.server.host=http://115.144.238.29:90/client/tracnce
+cnyPlpay.server.shopNo=356
+cnyPlpay.server.signType=MD5
+cnyPlpay.server.md5Key=TQSsHaM68c
+cnyPlpay.server.customerId=test1234
+cnyPlpay.server.c2c_fee_ratio=0.025
+
+plpay.server.c2c_fee_ratio=0.025
