--- a/ex-fund-account/src/main/resources/application-local.properties
+++ b/ex-fund-account/src/main/resources/application-local.properties
@@ -8,3 +8,13 @@ hp.rocketmq.namespace=exp_v3-local
 meta.redis.host=192.168.0.68
 meta.redis.port=16375
 meta.redis.password=456
+
+#c2c \u4EBA\u6C11\u5E01\u5BF9\u63A5
+cnyPlpay.server.host=http://115.144.238.29:90/client/tracnce
+cnyPlpay.server.shopNo=334
+cnyPlpay.server.signType=MD5
+cnyPlpay.server.md5Key=HIETqcV152
+cnyPlpay.server.customerId=gte666
+cnyPlpay.server.c2c_fee_ratio=0.025
+
+plpay.server.c2c_fee_ratio=0.025
