--- a/ex-fund-account/src/main/resources/application-prod.properties
+++ b/ex-fund-account/src/main/resources/application-prod.properties
@@ -20,3 +20,14 @@ spring.redis.password=
 #bys
 bys.server.host=http://172.31.40.203:7080/api/v1/
 bys.client.secret=cFH]0bNrt7gJI+1n5D9B
+
+
+#c2c \u4EBA\u6C11\u5E01\u5BF9\u63A5
+cnyPlpay.server.host=http://115.144.238.29:90/client/tracnce
+cnyPlpay.server.shopNo=334
+cnyPlpay.server.signType=MD5
+cnyPlpay.server.md5Key=HIETqcV152
+cnyPlpay.server.customerId=gte666
+cnyPlpay.server.c2c_fee_ratio=0.025
+
+plpay.server.c2c_fee_ratio=0.025
