--- a/ex-bb-kline/src/main/resources/application-bai.properties
+++ b/ex-bb-kline/src/main/resources/application-bai.properties
@@ -12,11 +12,11 @@ bb.kline.expHistoryBatchSize=1440
 bb.kline.kline2TradeBatchSize=1440
 bb.kline.bbGroupIds=1
 
-bb.kline.ongoingAppend.enable=1
-bb.kline.ongoingMerge.enable=1
-bb.kline.bbKlineThirdCoverEnable=1
-bb.kline.bbKlineFromExpCalcEnable=1
-bb.kline.bbKlineFromExpCoverEnable=1
+bb.kline.ongoingAppend.enable=0
+bb.kline.ongoingMerge.enable=0
+bb.kline.bbKlineThirdCoverEnable=0
+bb.kline.bbKlineFromExpCalcEnable=0
+bb.kline.bbKlineFromExpCoverEnable=0
 bb.kline.bbRepairTrade.enable=1
 
 
@@ -40,7 +40,7 @@ from_exp.bbKlineDataPattern=from_exp:bbKlineData:%{asset}:%{symbol}:%{freq}
 from_exp.bbKlineDataUpdateEventPattern=from_exp:bbKlineDataUpdateEvent:%{asset}:%{symbol}:%{freq}
 
 #\u76D1\u542C\u9700\u8981\u4FEE\u590Dkline\u7684\u4E8B\u4EF6
-bb.kline2Trade.taskEventPattern=bb:kline2Trade:%{asset}:%{symbol}:%{freq}
+bb.kline2Trade.taskEventPattern=bb:kline2Trade2:%{asset}:%{symbol}:%{freq}
 
 
 bbkline.ongoing.redis.hostName=192.168.0.68
