--- a/ex-fund-account/src/main/resources/application-bai.properties
+++ b/ex-fund-account/src/main/resources/application-bai.properties
@@ -30,11 +30,22 @@ spring.redis.jedis.pool.min-idle=0
 spring.redis.timeout=2000
 
 #c2c \u4EBA\u6C11\u5E01\u5BF9\u63A5
+
 cnyPlpay.server.host=http://115.144.238.29:90/client/tracnce
-cnyPlpay.server.shopNo=334
+cnyPlpay.server.shopNo=356
 cnyPlpay.server.signType=MD5
-cnyPlpay.server.md5Key=HIETqcV152
-cnyPlpay.server.customerId=gte666
+cnyPlpay.server.md5Key=TQSsHaM68c
+cnyPlpay.server.customerId=test1234
 cnyPlpay.server.c2c_fee_ratio=0.025
 
 plpay.server.c2c_fee_ratio=0.025
+
+
+
+#cnyPlpay.server.host=http://115.144.238.29:90/client/tracnce
+#cnyPlpay.server.shopNo=334
+#cnyPlpay.server.signType=MD5
+#cnyPlpay.server.md5Key=HIETqcV152
+#cnyPlpay.server.customerId=gte666
+#cnyPlpay.server.c2c_fee_ratio=0.025
+#plpay.server.c2c_fee_ratio=0.025
