--- a/ex-bb-kline/src/main/resources/application-prod.properties
+++ b/ex-bb-kline/src/main/resources/application-prod.properties
@@ -36,14 +36,12 @@ kline.bb.thirdDataPattern=kline:bb:thirdData:%{asset}:%{symbol}:%{freq}
 kline.bb.thirdDataUpdateEventPattern=kline:bb:thirdDataUpdateEvent:%{asset}:%{symbol}:%{freq}
 
 #Exp \u5E73\u53F0\u5386\u53F2
-#bb.kline.task=kline:task:from_exp:BB:%{asset}:%{symbol}:%{freq}
-#bb.kline.repair=kline:from_exp:repair:BB:%{asset}:%{symbol}:%{freq}
-#bb.kline.notifyUpdate=kline:from_exp:update:BB:%{asset}:%{symbol}:%{freq}
-
 from_exp.bbKlineTaskPattern=from_exp:bbKlineTask:%{asset}:%{symbol}:%{freq}
 from_exp.bbKlineDataPattern=from_exp:bbKlineData:%{asset}:%{symbol}:%{freq}
 from_exp.bbKlineDataUpdateEventPattern=from_exp:bbKlineDataUpdateEvent:%{asset}:%{symbol}:%{freq}
 
+#\u76D1\u542C\u9700\u8981\u4FEE\u590Dkline\u7684\u4E8B\u4EF6
+bb.kline2Trade.taskEventPattern=bb:kline2Trade:%{asset}:%{symbol}:%{freq}
 
 bbkline.ongoing.redis.hostName=prod-gte.f65mmb.ng.0001.apne1.cache.amazonaws.com
 bbkline.ongoing.redis.password=
