--- a/ex-pc-match/src/main/resources/application.properties
+++ b/ex-pc-match/src/main/resources/application.properties
@@ -38,7 +38,7 @@ log.dir=d:/logs/pcmatch_${pcmatch.matchGroupId}/
 
 suffix=v3-local
 
-spring.datasource.url=jdbc:mysql://192.168.0.190:3306/exp-pc_${suffix}?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://192.168.0.190:3306/exp_pc_${suffix}?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=root
 spring.datasource.password=root1234
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
