--- a/ex-bb-kline/src/main/resources/application-bai.properties
+++ b/ex-bb-kline/src/main/resources/application-bai.properties
@@ -24,10 +24,10 @@ bb.kline.bbRepairTrade.enable=0
 bb.trade.pattern=bb:trade:%{asset}:%{symbol}
 
 #bb.kline.trigger.pattern=bb:kline:trigger:%{asset}:%{symbol}:%{freq}
-bb.kline.updateEventPattern=bb:kline:updateEvent:%{asset}:%{symbol}:%{freq}
+bb.kline.updateEventPattern=bb:kline:updateEvent2:%{asset}:%{symbol}:%{freq}
 # bb kline data pattern
 #bb.kline=bb:kline:%{asset}:%{symbol}:%{freq}
-bb.kline=candle:bb:%{asset}:%{symbol}:%{freq}
+bb.kline=candle:bb2:%{asset}:%{symbol}:%{freq}
 
 
 # third data
@@ -35,13 +35,13 @@ kline.bb.thirdDataPattern=kline:bb:thirdData:%{asset}:%{symbol}:%{freq}
 kline.bb.thirdDataUpdateEventPattern=kline:bb:thirdDataUpdateEvent:%{asset}:%{symbol}:%{freq}
 
 #Exp \u5E73\u53F0\u5386\u53F2
-from_exp.bbKlineTaskPattern=from_exp:bbKlineTask:%{asset}:%{symbol}:%{freq}
-from_exp.bbKlineDataPattern=from_exp:bbKlineData:%{asset}:%{symbol}:%{freq}
-from_exp.bbKlineDataUpdateEventPattern=from_exp:bbKlineDataUpdateEvent:%{asset}:%{symbol}:%{freq}
+from_exp.bbKlineTaskPattern=from_exp:bbKlineTask2:%{asset}:%{symbol}:%{freq}
+from_exp.bbKlineDataPattern=from_exp:bbKlineData2:%{asset}:%{symbol}:%{freq}
+from_exp.bbKlineDataUpdateEventPattern=from_exp:bbKlineDataUpdateEvent2:%{asset}:%{symbol}:%{freq}
 
 
 #\u76D1\u542C\u9700\u8981\u4FEE\u590Dkline\u7684\u4E8B\u4EF6
-bb.kline2Trade.taskEventPattern=bb:kline2Trade:%{asset}:%{symbol}:%{freq}
+bb.kline2Trade.taskEventPattern=bb:kline2Trade2:%{asset}:%{symbol}:%{freq}
 
 
 bbkline.ongoing.redis.hostName=192.168.0.68
