--- a/ex-bb-kline/src/main/resources/application-pcdev.properties
+++ b/ex-bb-kline/src/main/resources/application-pcdev.properties
@@ -11,6 +11,7 @@ bb.kline.thirdBatchSize=1440
 bb.kline.expHistoryBatchSize=1440
 bb.kline.kline2TradeBatchSize=1440
 
+bb.kline.symbols=pc_contract
 bb.kline.bbGroupIds=1
 
 bb.kline.ongoingAppend.enable=1
