--- a/ex-bb-kline/src/main/resources/application-bbdev.properties
+++ b/ex-bb-kline/src/main/resources/application-bbdev.properties
@@ -1,11 +1,6 @@
-
-app.registry.eureka.url=http://eureka:HpyMV63TDu2y@172.31.42.82:8761/eureka/
-
-#db
-spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://gte.cforcheswgwm.ap-northeast-1.rds.amazonaws.com:3306/expv3_bb?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
-spring.datasource.hikari.primary.username=bbext
-spring.datasource.hikari.primary.password=DUR3J2Gyfb923Y834cP
-
+spring.datasource.hikari.primary.jdbcUrl=jdbc:mysql://192.168.0.190:3306/expv3_bb?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true
+spring.datasource.hikari.primary.username=root
+spring.datasource.hikari.primary.password=root1234
 
 #swagger
 swagger.host=
@@ -14,9 +9,10 @@ bb.kline.supportFrequenceString=1,5,10,15,30,60,360,1440
 bb.kline.triggerBatchSize=1440
 bb.kline.thirdBatchSize=1440
 bb.kline.expHistoryBatchSize=1440
+bb.kline.kline2TradeBatchSize=1440
 
-bb.kline.bbGroupIds=1
 bb.kline.bbSymbol=bb_symbol
+bb.kline.bbGroupIds=1
 
 bb.kline.ongoingAppend.enable=1
 bb.kline.ongoingMerge.enable=1
@@ -48,9 +44,9 @@ from_exp.bbKlineDataUpdateEventPattern=from_exp:bbKlineDataUpdateEvent:%{asset}:
 #\u76D1\u542C\u9700\u8981\u4FEE\u590Dkline\u7684\u4E8B\u4EF6
 bb.kline2Trade.taskEventPattern=bb:kline2Trade:%{asset}:%{symbol}:%{freq}
 
-bbkline.ongoing.redis.hostName=prod-gte.f65mmb.ng.0001.apne1.cache.amazonaws.com
-bbkline.ongoing.redis.password=
-bbkline.ongoing.redis.port=6379
+bbkline.ongoing.redis.hostName=192.168.0.68
+bbkline.ongoing.redis.password=456
+bbkline.ongoing.redis.port=16375
 bbkline.ongoing.redis.database=5
 bbkline.ongoing.redis.timeout=6000
 bbkline.ongoing.redis.minIdle=2
@@ -61,9 +57,9 @@ bbkline.ongoing.redis.testOnBorrow=true
 bbkline.ongoing.redis.testOnReturn=true
 bbkline.ongoing.redis.testWhileIdle=true
 
-metadata.redis.hostName=prod-gte.f65mmb.ng.0001.apne1.cache.amazonaws.com
-metadata.redis.password=
-metadata.redis.port=6379
+metadata.redis.hostName=192.168.0.68
+metadata.redis.password=456
+metadata.redis.port=16375
 metadata.redis.database=0
 metadata.redis.timeout=6000
 metadata.redis.minIdle=2
@@ -74,15 +70,12 @@ metadata.redis.testOnBorrow=true
 metadata.redis.testOnReturn=true
 metadata.redis.testWhileIdle=true
 
-
 #mq
-hp.rocketmq.namesrvAddr=172.31.5.60:9876;172.31.14.83:9876
-hp.rocketmq.namespace=exp
-hp.rocketmq.instanceName=1
+hp.rocketmq.namespace=exp_v3
+hp.rocketmq.createConsumer=false
 
 #redis
 spring.cache.type=redis
-spring.redis.host=prod-gte.f65mmb.ng.0001.apne1.cache.amazonaws.com
-spring.redis.port=6379
-spring.redis.password=
-
+spring.redis.host=192.168.0.68
+spring.redis.port=16375
+spring.redis.password=456
