--- a/ex-bb-kline/src/main/resources/application-bbdev.properties
+++ b/ex-bb-kline/src/main/resources/application-bbdev.properties
@@ -11,7 +11,7 @@ bb.kline.thirdBatchSize=1440
 bb.kline.expHistoryBatchSize=1440
 bb.kline.kline2TradeBatchSize=1440
 
-bb.kline.bbSymbol=bb_symbol
+bb.kline.symbols=bb_symbol
 bb.kline.bbGroupIds=1
 
 bb.kline.ongoingAppend.enable=1
