--- a/ex-bb-kline/src/main/resources/application-bai.properties
+++ b/ex-bb-kline/src/main/resources/application-bai.properties
@@ -10,6 +10,8 @@ bb.kline.triggerBatchSize=1440
 bb.kline.thirdBatchSize=1440
 bb.kline.expHistoryBatchSize=1440
 bb.kline.kline2TradeBatchSize=1440
+
+bb.kline.symbols=bb_symbol
 bb.kline.bbGroupIds=1
 
 bb.kline.ongoingAppend.enable=0
