--- a/ex-bb-kline/src/main/resources/application-prod.properties
+++ b/ex-bb-kline/src/main/resources/application-prod.properties
@@ -16,7 +16,7 @@ bb.kline.thirdBatchSize=1440
 bb.kline.expHistoryBatchSize=1440
 
 bb.kline.bbGroupIds=1
-bb.kline.bbSymbol=bb_symbol
+bb.kline.symbols=bb_symbol
 
 bb.kline.ongoingAppend.enable=1
 bb.kline.ongoingMerge.enable=1
