--- a/ex-bb-kline/src/main/resources/application-prod.properties
+++ b/ex-bb-kline/src/main/resources/application-prod.properties
@@ -15,6 +15,9 @@ bb.kline.triggerBatchSize=1440
 bb.kline.thirdBatchSize=1440
 bb.kline.expHistoryBatchSize=1440
 
+
+kline.bb.trade=
+kline.bb.repair.trade=
 bb.kline.bbGroupIds=1
 bb.kline.symbols=bb_symbol
 
