--- a/ex-bb-kline/src/main/resources/application-bbdev.properties
+++ b/ex-bb-kline/src/main/resources/application-bbdev.properties
@@ -11,6 +11,8 @@ bb.kline.thirdBatchSize=1440
 bb.kline.expHistoryBatchSize=1440
 bb.kline.kline2TradeBatchSize=1440
 
+kline.bb.trade=bb_trade
+kline.bb.repair.trade=bb_repair_trade
 bb.kline.symbols=bb_symbol
 bb.kline.bbGroupIds=1
 
