--- a/ex-bb-kline/src/main/resources/application-pcdev.properties
+++ b/ex-bb-kline/src/main/resources/application-pcdev.properties
@@ -11,6 +11,8 @@ bb.kline.thirdBatchSize=1440
 bb.kline.expHistoryBatchSize=1440
 bb.kline.kline2TradeBatchSize=1440
 
+kline.bb.trade=pc_trade
+kline.bb.repair.trade=pc_repair_trade
 bb.kline.symbols=pc_contract
 bb.kline.bbGroupIds=1
 
