--- a/ex-bb-kline/src/main/resources/application-bbprod3.properties
+++ b/ex-bb-kline/src/main/resources/application-bbprod3.properties
@@ -15,7 +15,7 @@ bb.kline.supportFrequenceString=1,5,10,15,30,60,360,1440
 bb.kline.triggerBatchSize=1440
 bb.kline.thirdBatchSize=1440
 bb.kline.expHistoryBatchSize=1440
-
+bb.kline.kline2TradeBatchSize=1440
 
 kline.bb.trade=bb_trade
 kline.bb.repair.trade=bb_repair_trade
