--- a/ex-bb-kline/src/main/resources/application-pcprod1.properties
+++ b/ex-bb-kline/src/main/resources/application-pcprod1.properties
@@ -15,7 +15,7 @@ bb.kline.supportFrequenceString=1,5,10,15,30,60,360,1440
 bb.kline.triggerBatchSize=1440
 bb.kline.thirdBatchSize=1440
 bb.kline.expHistoryBatchSize=1440
-
+bb.kline.kline2TradeBatchSize=1440
 
 kline.bb.trade=pc_trade
 kline.bb.repair.trade=pc_repair_trade
