--- a/ex-bb-match/src/main/resources/configs/application-prod.properties
+++ b/ex-bb-match/src/main/resources/configs/application-prod.properties
@@ -1,4 +1,4 @@
-app.server.port=8053
+app.server.port=8013
 
 id.dataCenterBits=2
 id.serverBits=5
@@ -30,14 +30,14 @@ bbmatch.rediskey.bbOrderMatchedQueueSizeRedisKeyPattern=size
 
 bbmatch.rediskey.bbSymbolPattern=bb_symbol
 
-log.dir=/root/logs/bbmatch_${bbmatch.matchGroupId}
+log.dir=/home/centos/logs/bbmatch_${bbmatch.matchGroupId}
 
 suffix=
 
 rmq.nameSrvAddr=172.31.5.60:9876;172.31.14.83:9876
 rmq.nameSpace=exp
 
-bbmatch.id.serverId=31
+bbmatch.id.serverId=1
 bbmatch.id.caller=bbmatch
 
 bbmatch.matchGroupId=1
