--- a/ex-pc-match/src/main/resources/configs/application-prod.properties
+++ b/ex-pc-match/src/main/resources/configs/application-prod.properties
@@ -1,4 +1,4 @@
-app.server.port=8053
+app.server.port=8013
 
 mybatis.config-location=classpath:mybatis/mybatis-config.xml
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
@@ -34,11 +34,11 @@ pcmatch.rediskey.pcOrderMatchedQueueSizeRedisKeyPattern=size
 
 pcmatch.rediskey.pcContractPattern=pc_contract
 
-log.dir=log.dir=/home/centos/logs/pcmatch_${pcmatch.matchGroupId}
+log.dir=/home/centos/logs/pcmatch_${pcmatch.matchGroupId}
 
 suffix=
 
-spring.datasource.url=jdbc:mysql://gte.cforcheswgwm.ap-northeast-1.rds.amazonaws.com:3306/expv3-pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.url=jdbc:mysql://gte.cforcheswgwm.ap-northeast-1.rds.amazonaws.com:3306/expv3_pc?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
 spring.datasource.username=pcmatch
 spring.datasource.password=DUR3J2Gyfb923Y834cP
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -46,11 +46,12 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 rmq.nameSrvAddr=172.31.5.60:9876;172.31.14.83:9876
 rmq.nameSpace=exp
 
-pcmatch.id.serverId=31
+pcmatch.id.serverId=1
 pcmatch.id.caller=pcmatch
 
 pcmatch.matchGroupId=1
 pcmatch.saveTradeBatchSize=8
+
 
 pcmatch.redis.hostName=prod-gte.f65mmb.ng.0001.apne1.cache.amazonaws.com
 pcmatch.redis.password=
