--- a/ex-fund-account/src/main/resources/application-prod.properties
+++ b/ex-fund-account/src/main/resources/application-prod.properties
@@ -18,11 +18,11 @@ spring.redis.port=6379
 spring.redis.password=
 
 #bys
-bys.server.host=http://172.31.40.203:7080/api/v1/
+bys.server.host=http://172.31.40.203:7080/api/v1
 bys.client.secret=cFH]0bNrt7gJI+1n5D9B
 
 
-#c2c \u4EBA\u6C11\u5E01\u5BF9\u63A5
+#c2c \u4eba\u6c11\u5e01\u5bf9\u63a5
 cnyPlpay.server.host=http://115.144.238.29:90/client/tracnce
 cnyPlpay.server.shopNo=334
 cnyPlpay.server.signType=MD5
