ex-bb BbTrade -> BbMatch h

--- a/ex-bb-match/src/main/resources/configs/application-prod.properties
+++ b/ex-bb-match/src/main/resources/configs/application-prod.properties
@@ -1,5 +1,14 @@
 app.server.port=8013
 
+mybatis.config-location=classpath:mybatis/mybatis-config.xml
+mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
+mybatis.typeAliasesPackage=com.hp.sh.expv3.**.entity
+
+spring.datasource.url=jdbc:mysql://192.168.0.190:3306/expv3_bb_local?useUnicode=true&characterEncoding=utf8&useSSL=false&zeroDateTimeBehavior=convertToNull
+spring.datasource.username=root
+spring.datasource.password=root1234
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
 id.dataCenterBits=2
 id.serverBits=5
 id.idTypeBits=8
@@ -10,6 +19,7 @@ bbmatch.id.dataCenterId=0
 bbmatch.rmq.bbOrderConsumerGroupName=bbOrderMatchConsumer_${asset}_${symbol}
 bbmatch.rmq.bbOrderConsumerInstanceName=bbOrderMatchConsumer_${asset}_${symbol}_${bbmatch.id.serverId}
 bbmatch.rmq.matchPullTimeoutInMs=600000
+bbmatch.rmq.matchTopicQueueSize=64
 
 bbmatch.rmq.bbOrderProducerGroupName=bbOrder4Match
 bbmatch.rmq.bbOrderProducerInstanceName=bbOrder4Match_${bbmatch.id.serverId}
@@ -41,8 +51,7 @@ bbmatch.id.serverId=1
 bbmatch.id.caller=bbmatch
 
 bbmatch.matchGroupId=1
-bbmatch.sendMatchBatchEnable=1
-bbmatch.tradeBatchSize=8
+bbmatch.matchSaveBatchSize=8
 
 bbmatch.redis.hostName=prod-gte.f65mmb.ng.0001.apne1.cache.amazonaws.com
 bbmatch.redis.password=
