--- a/ex-bb-kline/src/main/resources/application-bbprod3.properties
+++ b/ex-bb-kline/src/main/resources/application-bbprod3.properties
@@ -17,7 +17,7 @@ bb.kline.thirdBatchSize=1440
 bb.kline.expHistoryBatchSize=1440
 bb.kline.kline2TradeBatchSize=1440
 
-kline.bb.trade=bb_trade
+kline.bb.trade=bb_match
 kline.bb.repair.trade=bb_repair_trade
 bb.kline.symbols=bb_symbol
 bb.kline.bbGroupIds=3
