--- a/ex-bb-base/src/main/resources/application-dev.properties
+++ b/ex-bb-base/src/main/resources/application-dev.properties
@@ -16,3 +16,8 @@ spring.cache.type=redis
 spring.redis.host=192.168.0.68
 spring.redis.port=16375
 spring.redis.password=456
+redis.subscriber.enable=true
+
+#xxl-job
+xxl.job.enable=true
+xxl.job.admin.addresses=http://192.168.0.97:8780/xxl-job-admin
