--- a/ex-bb-base/src/main/resources/application-local.properties
+++ b/ex-bb-base/src/main/resources/application-local.properties
@@ -6,6 +6,8 @@ hp.rocketmq.namesrvAddr=192.168.0.73:9876;192.168.0.74:9876
 #hp.rocketmq.namesrvAddr=127.0.0.1:9876
 hp.rocketmq.namespace=exp_v3-local
 hp.rocketmq.instanceName=w1
+hp.rocketmq.enabled=false
+
 #eureka
 #eureka.instance.ip-address=127.0.0.1
 eureka.instance.namespace=w1
@@ -18,5 +20,7 @@ spring.redis.host=192.168.0.68
 spring.redis.port=16375
 spring.redis.password=456
 
-
+#xxl-job
+xxl.job.enable=true
 xxl.job.executor.appname=${spring.application.name}-local
+xxl.job.admin.addresses=http://192.168.0.97:8780/xxl-job-admin
