bb账单接口缺少主键id字段

--- a/ex-bb-kline/src/main/resources/application-bai.properties
+++ b/ex-bb-kline/src/main/resources/application-bai.properties
@@ -4,7 +4,10 @@ app.server.port=8056
 #swagger
 swagger.host=localhost:${app.server.port}
 
-hp.rocketmq.namespace=exp_v3-local
+#mq
+hp.rocketmq.namespace=exp_v3
+hp.rocketmq.namesrvAddr=192.168.0.73:9876;192.168.0.74:9876
+
 
 bb.kline.supportFrequenceString=1,5,10,15,30,60,360,1440
 bb.kline.triggerBatchSize=1440
@@ -107,4 +110,7 @@ spring.redis.jedis.pool.max-idle=8
 # \u8FDE\u63A5\u6C60\u4E2D\u7684\u6700\u5C0F\u7A7A\u95F2\u8FDE\u63A5
 spring.redis.jedis.pool.min-idle=0
 # \u8FDE\u63A5\u8D85\u65F6\u65F6\u95F4\uFF08\u6BEB\u79D2\uFF09
-spring.redis.timeout=2000
+spring.redis.timeout=5000
+
+
+
