--- a/ex-bb-kline/src/main/resources/application-bbdev.properties
+++ b/ex-bb-kline/src/main/resources/application-bbdev.properties
@@ -76,6 +76,7 @@ metadata.redis.testWhileIdle=true
 
 #mq
 hp.rocketmq.namespace=exp_v3
+hp.rocketmq.namesrvAddr=192.168.0.73:9876;192.168.0.74:9876
 hp.rocketmq.createConsumer=false
 
 #redis
