--- a/pom.xml
+++ b/pom.xml
@@ -37,7 +37,8 @@
 		<module>ex-bb-extend-def</module>
 
 		<module>ex-bb-kline</module>
-	</modules>
+        <module>ex-bb-trade</module>
+    </modules>
 
     <dependencies>
         <dependency>
