--- a/ex-pc-base/src/main/resources/application.properties
+++ b/ex-pc-base/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+app.server.id=1
 app.server.port=8052
 app.registry.eureka.url=http://eureka:HpyMV63TDu2y@localhost:8761/eureka/
 
@@ -32,7 +33,7 @@ spring.datasource.hikari.primary.connection-init-sql=set names utf8mb4;
 
 #id
 id.generator.dataCenterId=0
-id.generator.serverId=1
+id.generator.serverId=${app.server.id}
 
 #redis
 spring.cache.type=redis
