--- a/ex-fund-account/src/main/resources/application.properties
+++ b/ex-fund-account/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+app.server.id=0
 app.server.port=8051
 app.registry.eureka.url=http://eureka:HpyMV63TDu2y@localhost:8761/eureka/
 
@@ -29,7 +30,7 @@ spring.datasource.hikari.primary.connection-init-sql=set names utf8mb4;
 
 #id
 id.generator.dataCenterId=0
-id.generator.serverId=0
+id.generator.serverId=${app.server.id}
 
 #bys
 bys.server.host=http://192.168.0.13:7080/api/v1
