bb-trade update 配置文件

--- a/ex-bb-trade/src/main/resources/application-bbdev.properties
+++ b/ex-bb-trade/src/main/resources/application-bbdev.properties
@@ -6,6 +6,7 @@ spring.datasource.hikari.primary.password=root1234
 
 bb.trade.bbGroupIds=1
 bb.trade.symbols=bb_symbol
+bb.trade.table=bb_match
 
 metadata.redis.hostName=192.168.0.68
 metadata.redis.password=456
