--- a/ex-bb-trade/src/main/resources/application-bbprod3.properties
+++ b/ex-bb-trade/src/main/resources/application-bbprod3.properties
@@ -9,6 +9,7 @@ spring.datasource.hikari.primary.password=DUR3J2Gyfb923Y834cP
 
 bb.trade.bbGroupIds=3
 bb.trade.symbols=bb_symbol
+bb.trade.table=bb_match
 
 metadata.redis.hostName=prod-gte.f65mmb.ng.0001.apne1.cache.amazonaws.com
 metadata.redis.password=
