--- a/ex-bb-trade/src/main/resources/application-bai.properties
+++ b/ex-bb-trade/src/main/resources/application-bai.properties
@@ -11,7 +11,7 @@ hp.rocketmq.namesrvAddr=192.168.0.73:9876;192.168.0.74:9876
 
 bb.trade.bbGroupIds=1
 bb.trade.symbols=bb_symbol
-
+bb.trade.table=bb_match
 
 metadata.redis.hostName=192.168.0.68
 metadata.redis.password=456
